--- a/templates/view-tars.html
+++ b/templates/view-tars.html
@@ -192,16 +192,21 @@
                                 <div class="ps-3">
                                     <div class="text-base font-semibold" x-text="item.title"></div>
                                     <div class="flex flex-row items-center gap-3">
-                                        <div class="flex -space-x-3 rtl:space-x-reverse">
-                                            <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="">
-                                            <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                src="https://flowbite.com/docs/images/people/profile-picture-2.jpg" alt="">
-                                            <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                src="https://flowbite.com/docs/images/people/profile-picture-3.jpg" alt="">
-                                            <a class="flex items-center justify-center w-8 h-8 text-xs font-medium text-white bg-gray-400 border-2 border-white rounded-full hover:bg-gray-500 dark:border-gray-800"
-                                                href="#">+3</a>
-                                        </div>
+                                        <a href="#users" class="flex flex-row gap-3">
+
+                                            <div class="flex -space-x-3 rtl:space-x-reverse">
+                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
+                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
+                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
+                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
+                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
+                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
+                                                <template x-if="item.checkins.length - 3 > 0">
+                                                    <a class="flex items-center justify-center w-8 h-8 text-xs font-medium text-white bg-gray-400 border-2 border-white rounded-full hover:bg-gray-500 dark:border-gray-800"
+                                                    href="#" x-text="`+${item.checkins.length - 3}`"></a>
+                                                </template>
+                                            </div>
+                                        </a>
                                         <template x-if="item.type === 'TAR'">
                                             <span
                                                 class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">TAR</span>
