--- a/templates/view_checkin.html
+++ b/templates/view_checkin.html
@@ -133,7 +133,7 @@
             </ol>
         </nav>
 
-        <a href="/qrcode-gen"
+        <a href="qrcode-gen"
             class="absolute ms-4 bottom-10 left-64 px-6 py-3.5 text-base font-medium text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             <svg class="rotate-180 w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                 viewBox="0 0 14 10">
