--- a/templates/view-tars.html
+++ b/templates/view-tars.html
@@ -195,13 +195,9 @@
                                         <a href="#users" class="flex flex-row gap-3">
 
                                             <div class="flex -space-x-3 rtl:space-x-reverse">
-                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
-                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
-                                                <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800"
-                                                    src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="">
-                                                <template x-if="item.checkins.length - 3 > 0">
+                                                <template x-for="item in item.checkins.slice(0, 3)">
+                                                    <img class="w-8 h-8 border-2 border-white rounded-full dark:border-gray-800" src="https://flowbite.com/docs/images/people/profile-picture-1.jpg" alt="" />
+                                                </template>                                                <template x-if="item.checkins.length - 3 > 0">
                                                     <a class="flex items-center justify-center w-8 h-8 text-xs font-medium text-white bg-gray-400 border-2 border-white rounded-full hover:bg-gray-500 dark:border-gray-800"
                                                     href="#" x-text="`+${item.checkins.length - 3}`"></a>
                                                 </template>
